--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <p>The original visionary and commissioner of the Britalian Football League.</p>
                 </div>
                 <div class="card">
-                    <h3>Vhiaan</h3>
+                    <h3>Vihaan</h3>
                     <p class="role">Co-owner</p>
                     <p>A key stakeholder known for strategic insights and game-day leadership.</p>
                 </div>
@@ -273,7 +273,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr><td>1</td><td>Vhiaan</td><td>1</td></tr>
+                    <tr><td>1</td><td>Vihaan</td><td>1</td></tr>
                     <tr><td>2</td><td>Max</td><td>0</td></tr>
                     <tr><td>2</td><td>Jared</td><td>0</td></tr>
                     <tr><td>2</td><td>Ben</td><td>0</td></tr>
@@ -296,7 +296,7 @@
                 <tbody>
                     <tr><td>1</td><td>Jared</td><td>1</td></tr>
                     <tr><td>2</td><td>Max</td><td>0</td></tr>
-                    <tr><td>2</td><td>Vhiaan</td><td>0</td></tr>
+                    <tr><td>2</td><td>Vihaan</td><td>0</td></tr>
                     <tr><td>2</td><td>Ben</td><td>0</td></tr>
                     <tr><td>2</td><td>Jaden</td><td>0</td></tr>
                     <tr><td>2</td><td>Micheal</td><td>0</td></tr>
@@ -317,7 +317,7 @@
                 <tbody>
                     <tr><td>1</td><td>Ben</td><td>1</td></tr>
                     <tr><td>2</td><td>Max</td><td>0</td></tr>
-                    <tr><td>2</td><td>Vhiaan</td><td>0</td></tr>
+                    <tr><td>2</td><td>Vihaan</td><td>0</td></tr>
                     <tr><td>2</td><td>Jared</td><td>0</td></tr>
                     <tr><td>2</td><td>Jaden</td><td>0</td></tr>
                     <tr><td>2</td><td>Micheal</td><td>0</td></tr>
@@ -337,7 +337,7 @@
                 </thead>
                 <tbody>
                     <tr><td>1</td><td>Max</td><td>0</td></tr>
-                    <tr><td>1</td><td>Vhiaan</td><td>0</td></tr>
+                    <tr><td>1</td><td>Vihaan</td><td>0</td></tr>
                     <tr><td>1</td><td>Jared</td><td>0</td></tr>
                     <tr><td>1</td><td>Ben</td><td>0</td></tr>
                     <tr><td>1</td><td>Jaden</td><td>0</td></tr>
@@ -384,7 +384,7 @@
                 </div>
                 <div class="card">
                     <h3>Founding Council</h3>
-                    <p>Vhiaan, Jared, Jason, Micheal, and Harrison were instrumental in shaping the rules and the competitive spirit of the league from day one.</p>
+                    <p>Vihaan, Jared, Jason, Micheal, and Harrison were instrumental in shaping the rules and the competitive spirit of the league from day one.</p>
                 </div>
             </div>
         </section>
@@ -396,6 +396,8 @@
 
 </body>
 </html>
+
+
 
 
 
