--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         <!-- Creators Section -->
         <section id="creators" class="content-section">
             <h2>Meet the Founders</h2>
-            <p>Britalian Football wasn't born in a boardroom. It was forged on the field of honor (a backyard in Plainview, NY) by a group of friends with a love for competition and a healthy dose of rivalry. What started as a simple argument over whether British or Italian ingenuity was superior quickly evolved into the sport we know and love today.</p>
+            <p>Britalian Football wasn't born in a boardroom. It was forged on the fields of Pasadena by a group of friends with a love for competition and a passion for the game. What started as a simple backyard pastime quickly evolved into the organized, high-stakes sport we know and love today.</p>
             <div class="card-container">
                  <div class="card">
                     <h3>Max (Owner)</h3>
@@ -396,8 +396,4 @@
 
 </body>
 </html>
-
-
-
-
 
