--- a/index.html
+++ b/index.html
@@ -256,12 +256,17 @@
                     <p class="role">Co-owner</p>
                     <p>Drives the competitive spirit of the league forward.</p>
                 </div>
+                <div class="card">
+                    <h3>Sebastian</h3>
+                    <p class="role">Member</p>
+                    <p>The newest addition to the league, ready to make a mark.</p>
+                </div>
             </div>
         </section>
 
         <!-- Leaderboards Section -->
         <section id="leaderboards" class="content-section">
-            <h2>Season Standings</h2>
+            <h2>Leaderboards</h2>
             
             <h3>Touchdowns Scored</h3>
             <table class="leaderboard-table">
@@ -274,13 +279,14 @@
                 </thead>
                 <tbody>
                     <tr><td>1</td><td>Vihaan</td><td>1</td></tr>
-                    <tr><td>2</td><td>Max</td><td>0</td></tr>
-                    <tr><td>2</td><td>Jared</td><td>0</td></tr>
-                    <tr><td>2</td><td>Ben</td><td>0</td></tr>
-                    <tr><td>2</td><td>Jaden</td><td>0</td></tr>
-                    <tr><td>2</td><td>Micheal</td><td>0</td></tr>
-                    <tr><td>2</td><td>Jason</td><td>0</td></tr>
-                    <tr><td>2</td><td>Harrison</td><td>0</td></tr>
+                    <tr><td>1</td><td>Ben</td><td>1</td></tr>
+                    <tr><td>1</td><td>Harrison</td><td>1</td></tr>
+                    <tr><td>4</td><td>Max</td><td>0</td></tr>
+                    <tr><td>4</td><td>Jared</td><td>0</td></tr>
+                    <tr><td>4</td><td>Jaden</td><td>0</td></tr>
+                    <tr><td>4</td><td>Micheal</td><td>0</td></tr>
+                    <tr><td>4</td><td>Jason</td><td>0</td></tr>
+                    <tr><td>4</td><td>Sebastian</td><td>0</td></tr>
                 </tbody>
             </table>
 
@@ -294,7 +300,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr><td>1</td><td>Jared</td><td>1</td></tr>
+                    <tr><td>1</td><td>Jared</td><td>2</td></tr>
                     <tr><td>2</td><td>Max</td><td>0</td></tr>
                     <tr><td>2</td><td>Vihaan</td><td>0</td></tr>
                     <tr><td>2</td><td>Ben</td><td>0</td></tr>
@@ -302,6 +308,7 @@
                     <tr><td>2</td><td>Micheal</td><td>0</td></tr>
                     <tr><td>2</td><td>Jason</td><td>0</td></tr>
                     <tr><td>2</td><td>Harrison</td><td>0</td></tr>
+                    <tr><td>2</td><td>Sebastian</td><td>0</td></tr>
                 </tbody>
             </table>
 
@@ -316,13 +323,14 @@
                 </thead>
                 <tbody>
                     <tr><td>1</td><td>Ben</td><td>1</td></tr>
-                    <tr><td>2</td><td>Max</td><td>0</td></tr>
-                    <tr><td>2</td><td>Vihaan</td><td>0</td></tr>
-                    <tr><td>2</td><td>Jared</td><td>0</td></tr>
-                    <tr><td>2</td><td>Jaden</td><td>0</td></tr>
-                    <tr><td>2</td><td>Micheal</td><td>0</td></tr>
-                    <tr><td>2</td><td>Jason</td><td>0</td></tr>
-                    <tr><td>2</td><td>Harrison</td><td>0</td></tr>
+                    <tr><td>1</td><td>Jaden</td><td>1</td></tr>
+                    <tr><td>3</td><td>Max</td><td>0</td></tr>
+                    <tr><td>3</td><td>Vihaan</td><td>0</td></tr>
+                    <tr><td>3</td><td>Jared</td><td>0</td></tr>
+                    <tr><td>3</td><td>Micheal</td><td>0</td></tr>
+                    <tr><td>3</td><td>Jason</td><td>0</td></tr>
+                    <tr><td>3</td><td>Harrison</td><td>0</td></tr>
+                    <tr><td>3</td><td>Sebastian</td><td>0</td></tr>
                 </tbody>
             </table>
 
@@ -344,6 +352,7 @@
                     <tr><td>1</td><td>Micheal</td><td>0</td></tr>
                     <tr><td>1</td><td>Jason</td><td>0</td></tr>
                     <tr><td>1</td><td>Harrison</td><td>0</td></tr>
+                    <tr><td>1</td><td>Sebastian</td><td>0</td></tr>
                 </tbody>
             </table>
         </section>
@@ -366,9 +375,6 @@
                 </li>
                 <li>
                     <strong>The Ball:</strong> The game is played exclusively with a large, yellow, foam or rubber ball. No other ball is permitted.
-                </li>
-                <li>
-                    <strong>The Britalian Clause:</strong> Once per game, a team can invoke the "Britalian Clause," allowing them to attempt a trick play that would otherwise be illegal (e.g., two forward passes).
                 </li>
             </ul>
         </section>
@@ -396,4 +402,11 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
 
