--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- STEP 1: Change the website name here -->
     <title>Britalian Football</title>
-    <!-- Google Fonts -->
+    Google Fonts
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
             scroll-behavior: smooth;
         }
 
-        body {
+        body {/*  */
             font-family: 'Roboto', sans-serif;
             margin: 0;
             background-color: var(--dark-bg);
@@ -285,12 +285,12 @@
                     <tr><td>1</td><td>Vihaan</td><td>1</td></tr>
                     <tr><td>1</td><td>Ben</td><td>1</td></tr>
                     <tr><td>1</td><td>Harrison</td><td>1</td></tr>
-                    <tr><td>4</td><td>Max</td><td>0</td></tr>
-                    <tr><td>4</td><td>Jared</td><td>0</td></tr>
-                    <tr><td>4</td><td>Jaden</td><td>0</td></tr>
-                    <tr><td>4</td><td>Micheal</td><td>0</td></tr>
-                    <tr><td>4</td><td>Jason</td><td>0</td></tr>
-                    <tr><td>4</td><td>Sebastian</td><td>0</td></tr>
+                    <tr><td>1</td><td>Jared</td><td>1</td></tr>
+                    <tr><td>5</td><td>Max</td><td>0</td></tr>
+                    <tr><td>5</td><td>Jaden</td><td>0</td></tr>
+                    <tr><td>5</td><td>Micheal</td><td>0</td></tr>
+                    <tr><td>5</td><td>Jason</td><td>0</td></tr>
+                    <tr><td>5</td><td>Sebastian</td><td>0</td></tr>
                 </tbody>
             </table>
 
@@ -305,14 +305,14 @@
                 </thead>
                 <tbody>
                     <tr><td>1</td><td>Jared</td><td>2</td></tr>
-                    <tr><td>2</td><td>Max</td><td>0</td></tr>
-                    <tr><td>2</td><td>Vihaan</td><td>0</td></tr>
-                    <tr><td>2</td><td>Ben</td><td>0</td></tr>
-                    <tr><td>2</td><td>Jaden</td><td>0</td></tr>
-                    <tr><td>2</td><td>Micheal</td><td>0</td></tr>
-                    <tr><td>2</td><td>Jason</td><td>0</td></tr>
-                    <tr><td>2</td><td>Harrison</td><td>0</td></tr>
-                    <tr><td>2</td><td>Sebastian</td><td>0</td></tr>
+                    <tr><td>2</td><td>Micheal</td><td>1</td></tr>
+                    <tr><td>3</td><td>Max</td><td>0</td></tr>
+                    <tr><td>3</td><td>Vihaan</td><td>0</td></tr>
+                    <tr><td>3</td><td>Ben</td><td>0</td></tr>
+                    <tr><td>3</td><td>Jaden</td><td>0</td></tr>
+                    <tr><td>3</td><td>Jason</td><td>0</td></tr>
+                    <tr><td>3</td><td>Harrison</td><td>0</td></tr>
+                    <tr><td>3</td><td>Sebastian</td><td>0</td></tr>
                 </tbody>
             </table>
 
@@ -326,15 +326,15 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr><td>1</td><td>Ben</td><td>1</td></tr>
-                    <tr><td>1</td><td>Jaden</td><td>1</td></tr>
-                    <tr><td>3</td><td>Max</td><td>0</td></tr>
-                    <tr><td>3</td><td>Vihaan</td><td>0</td></tr>
-                    <tr><td>3</td><td>Jared</td><td>0</td></tr>
-                    <tr><td>3</td><td>Micheal</td><td>0</td></tr>
-                    <tr><td>3</td><td>Jason</td><td>0</td></tr>
-                    <tr><td>3</td><td>Harrison</td><td>0</td></tr>
-                    <tr><td>3</td><td>Sebastian</td><td>0</td></tr>
+                    <tr><td>1</td><td>Ben</td><td>3</td></tr>
+                    <tr><td>2</td><td>Jaden</td><td>1</td></tr>
+                    <tr><td>2</td><td>Jared</td><td>1</td></tr>
+                    <tr><td>4</td><td>Max</td><td>0</td></tr>
+                    <tr><td>4</td><td>Vihaan</td><td>0</td></tr>
+                    <tr><td>4</td><td>Micheal</td><td>0</td></tr>
+                    <tr><td>4</td><td>Jason</td><td>0</td></tr>
+                    <tr><td>4</td><td>Harrison</td><td>0</td></tr>
+                    <tr><td>4</td><td>Sebastian</td><td>0</td></tr>
                 </tbody>
             </table>
 
@@ -433,6 +433,9 @@
 
 </body>
 </html>
+
+
+
 
 
 
