--- a/index.html
+++ b/index.html
@@ -131,6 +131,13 @@
             border: none;
         }
         
+        .card .nickname {
+            font-style: italic;
+            font-size: 1.1em;
+            color: var(--secondary-color);
+            margin-bottom: 4px;
+        }
+
         .card .role {
             font-style: italic;
             color: var(--accent-color);
@@ -222,46 +229,55 @@
             <div class="card-container">
                 <div class="card">
                     <h3>Max</h3>
+                    <p class="nickname">"The Founder"</p>
                     <p class="role">Owner</p>
                     <p>The original visionary and commissioner of the Britalian Football League.</p>
                 </div>
                 <div class="card">
                     <h3>Vihaan</h3>
+                    <p class="nickname">"The Captain"</p>
                     <p class="role">Co-owner</p>
                     <p>A key stakeholder known for strategic insights and game-day leadership.</p>
                 </div>
                 <div class="card">
                     <h3>Jared</h3>
+                    <p class="nickname">"Glue Hands"</p>
                     <p class="role">Co-owner</p>
                     <p>Brings a powerful presence to the field and the boardroom.</p>
                 </div>
                 <div class="card">
                     <h3>Ben</h3>
+                    <p class="nickname">"The Blur"</p>
                     <p class="role">Member</p>
                     <p>A rising star known for agility and clutch plays.</p>
                 </div>
                 <div class="card">
                     <h3>Jaden</h3>
+                    <p class="nickname">"Lockdown"</p>
                     <p class="role">Member</p>
                     <p>A dedicated player, essential to the team's success on the field.</p>
                 </div>
                 <div class="card">
                     <h3>Micheal</h3>
+                    <p class="nickname">"The Cannon"</p>
                     <p class="role">Co-owner</p>
                     <p>Instrumental in league operations and a fierce competitor.</p>
                 </div>
                 <div class="card">
                     <h3>Jason</h3>
+                    <p class="nickname">"The Vet"</p>
                     <p class="role">Co-owner</p>
                     <p>A veteran of the game whose experience is invaluable to the league.</p>
                 </div>
                 <div class="card">
                     <h3>Harrison</h3>
+                    <p class="nickname">"The Engine"</p>
                     <p class="role">Co-owner</p>
                     <p>Drives the competitive spirit of the league forward.</p>
                 </div>
                 <div class="card">
                     <h3>Sebastian</h3>
+                    <p class="nickname">"The Natural"</p>
                     <p class="role">Member</p>
                     <p>The newest member of the league, ready to make an impact.</p>
                 </div>
@@ -433,29 +449,6 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
