--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- STEP 1: Change the website name here -->
     <title>Britalian Football</title>
-    Google Fonts
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
             scroll-behavior: smooth;
         }
 
-        body {/*  */
+        body {/* */
             font-family: 'Roboto', sans-serif;
             margin: 0;
             background-color: var(--dark-bg);
@@ -279,7 +279,25 @@
                     <h3>Sebastian</h3>
                     <p class="nickname">"The Natural"</p>
                     <p class="role">Member</p>
-                    <p>The newest member of the league, ready to make an impact.</p>
+                    <p>A key player known for his natural talent and big plays.</p>
+                </div>
+                <div class="card">
+                    <h3>Mathew F</h3>
+                    <p class="nickname">"The Flash"</p>
+                    <p class="role">Member</p>
+                    <p>A new addition, bringing speed and agility to the roster.</p>
+                </div>
+                <div class="card">
+                    <h3>Mathew H</h3>
+                    <p class="nickname">"The Hammer"</p>
+                    <p class="role">Member</p>
+                    <p>Known for his powerful presence and determined play.</p>
+                </div>
+                <div class="card">
+                    <h3>Cane</h3>
+                    <p class="nickname">"The Storm"</p>
+                    <p class="role">Member</p>
+                    <p>An unpredictable force on both sides of the ball.</p>
                 </div>
             </div>
         </section>
@@ -298,15 +316,18 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr><td>1</td><td>Vihaan</td><td>1</td></tr>
-                    <tr><td>1</td><td>Ben</td><td>1</td></tr>
-                    <tr><td>1</td><td>Harrison</td><td>1</td></tr>
-                    <tr><td>1</td><td>Jared</td><td>1</td></tr>
-                    <tr><td>5</td><td>Max</td><td>0</td></tr>
-                    <tr><td>5</td><td>Jaden</td><td>0</td></tr>
-                    <tr><td>5</td><td>Micheal</td><td>0</td></tr>
-                    <tr><td>5</td><td>Jason</td><td>0</td></tr>
-                    <tr><td>5</td><td>Sebastian</td><td>0</td></tr>
+                    <tr><td>1</td><td>Jared</td><td>3</td></tr>
+                    <tr><td>1</td><td>Vihaan</td><td>3</td></tr>
+                    <tr><td>3</td><td>Ben</td><td>2</td></tr>
+                    <tr><td>4</td><td>Harrison</td><td>1</td></tr>
+                    <tr><td>4</td><td>Max</td><td>1</td></tr>
+                    <tr><td>6</td><td>Jaden</td><td>0</td></tr>
+                    <tr><td>6</td><td>Jason</td><td>0</td></tr>
+                    <tr><td>6</td><td>Micheal</td><td>0</td></tr>
+                    <tr><td>6</td><td>Sebastian</td><td>0</td></tr>
+                    <tr><td>6</td><td>Mathew F</td><td>0</td></tr>
+                    <tr><td>6</td><td>Mathew H</td><td>0</td></tr>
+                    <tr><td>6</td><td>Cane</td><td>0</td></tr>
                 </tbody>
             </table>
 
@@ -320,15 +341,18 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr><td>1</td><td>Jared</td><td>2</td></tr>
-                    <tr><td>2</td><td>Micheal</td><td>1</td></tr>
-                    <tr><td>3</td><td>Max</td><td>0</td></tr>
-                    <tr><td>3</td><td>Vihaan</td><td>0</td></tr>
-                    <tr><td>3</td><td>Ben</td><td>0</td></tr>
-                    <tr><td>3</td><td>Jaden</td><td>0</td></tr>
-                    <tr><td>3</td><td>Jason</td><td>0</td></tr>
-                    <tr><td>3</td><td>Harrison</td><td>0</td></tr>
-                    <tr><td>3</td><td>Sebastian</td><td>0</td></tr>
+                    <tr><td>1</td><td>Sebastian</td><td>4</td></tr>
+                    <tr><td>2</td><td>Micheal</td><td>3</td></tr>
+                    <tr><td>3</td><td>Jared</td><td>2</td></tr>
+                    <tr><td>4</td><td>Max</td><td>0</td></tr>
+                    <tr><td>4</td><td>Vihaan</td><td>0</td></tr>
+                    <tr><td>4</td><td>Ben</td><td>0</td></tr>
+                    <tr><td>4</td><td>Jaden</td><td>0</td></tr>
+                    <tr><td>4</td><td>Jason</td><td>0</td></tr>
+                    <tr><td>4</td><td>Harrison</td><td>0</td></tr>
+                    <tr><td>4</td><td>Mathew F</td><td>0</td></tr>
+                    <tr><td>4</td><td>Mathew H</td><td>0</td></tr>
+                    <tr><td>4</td><td>Cane</td><td>0</td></tr>
                 </tbody>
             </table>
 
@@ -342,15 +366,18 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr><td>1</td><td>Ben</td><td>3</td></tr>
-                    <tr><td>2</td><td>Jaden</td><td>1</td></tr>
-                    <tr><td>2</td><td>Jared</td><td>1</td></tr>
-                    <tr><td>4</td><td>Max</td><td>0</td></tr>
-                    <tr><td>4</td><td>Vihaan</td><td>0</td></tr>
-                    <tr><td>4</td><td>Micheal</td><td>0</td></tr>
-                    <tr><td>4</td><td>Jason</td><td>0</td></tr>
-                    <tr><td>4</td><td>Harrison</td><td>0</td></tr>
-                    <tr><td>4</td><td>Sebastian</td><td>0</td></tr>
+                    <tr><td>1</td><td>Ben</td><td>4</td></tr>
+                    <tr><td>1</td><td>Jared</td><td>4</td></tr>
+                    <tr><td>3</td><td>Sebastian</td><td>3</td></tr>
+                    <tr><td>4</td><td>Jaden</td><td>1</td></tr>
+                    <tr><td>4</td><td>Micheal</td><td>1</td></tr>
+                    <tr><td>6</td><td>Max</td><td>0</td></tr>
+                    <tr><td>6</td><td>Vihaan</td><td>0</td></tr>
+                    <tr><td>6</td><td>Jason</td><td>0</td></tr>
+                    <tr><td>6</td><td>Harrison</td><td>0</td></tr>
+                    <tr><td>6</td><td>Mathew F</td><td>0</td></tr>
+                    <tr><td>6</td><td>Mathew H</td><td>0</td></tr>
+                    <tr><td>6</td><td>Cane</td><td>0</td></tr>
                 </tbody>
             </table>
 
@@ -364,15 +391,18 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr><td>1</td><td>Max</td><td>0</td></tr>
-                    <tr><td>1</td><td>Vihaan</td><td>0</td></tr>
-                    <tr><td>1</td><td>Jared</td><td>0</td></tr>
-                    <tr><td>1</td><td>Ben</td><td>0</td></tr>
-                    <tr><td>1</td><td>Jaden</td><td>0</td></tr>
-                    <tr><td>1</td><td>Miche-al</td><td>0</td></tr>
-                    <tr><td>1</td><td>Jason</td><td>0</td></tr>
-                    <tr><td>1</td><td>Harrison</td><td>0</td></tr>
-                    <tr><td>1</td><td>Sebastian</td><td>0</td></tr>
+                    <tr><td>1</td><td>Jared</td><td>1</td></tr>
+                    <tr><td>2</td><td>Max</td><td>0</td></tr>
+                    <tr><td>2</td><td>Vihaan</td><td>0</td></tr>
+                    <tr><td>2</td><td>Ben</td><td>0</td></tr>
+                    <tr><td>2</td><td>Jaden</td><td>0</td></tr>
+                    <tr><td>2</td><td>Micheal</td><td>0</td></tr>
+                    <tr><td>2</td><td>Jason</td><td>0</td></tr>
+                    <tr><td>2</td><td>Harrison</td><td>0</td></tr>
+                    <tr><td>2</td><td>Sebastian</td><td>0</td></tr>
+                    <tr><td>2</td><td>Mathew F</td><td>0</td></tr>
+                    <tr><td>2</td><td>Mathew H</td><td>0</td></tr>
+                    <tr><td>2</td><td>Cane</td><td>0</td></tr>
                 </tbody>
             </table>
         </section>
@@ -449,6 +479,10 @@
 
 </body>
 </html>
+
+
+
+
 
 
 
