--- a/index.html
+++ b/index.html
@@ -299,6 +299,12 @@
                     <p class="role">Member</p>
                     <p>An unpredictable force on both sides of the ball.</p>
                 </div>
+                 <div class="card">
+                    <h3>Zarren</h3>
+                    <p class="nickname">"The Wildcard"</p>
+                    <p class="role">Member</p>
+                    <p>A game-changer, known for making big plays when it counts.</p>
+                </div>
             </div>
         </section>
 
@@ -321,13 +327,14 @@
                     <tr><td>3</td><td>Ben</td><td>2</td></tr>
                     <tr><td>4</td><td>Harrison</td><td>1</td></tr>
                     <tr><td>4</td><td>Max</td><td>1</td></tr>
-                    <tr><td>6</td><td>Jaden</td><td>0</td></tr>
-                    <tr><td>6</td><td>Jason</td><td>0</td></tr>
-                    <tr><td>6</td><td>Micheal</td><td>0</td></tr>
-                    <tr><td>6</td><td>Sebastian</td><td>0</td></tr>
-                    <tr><td>6</td><td>Mathew F</td><td>0</td></tr>
-                    <tr><td>6</td><td>Mathew H</td><td>0</td></tr>
-                    <tr><td>6</td><td>Cane</td><td>0</td></tr>
+                    <tr><td>4</td><td>Micheal</td><td>1</td></tr>
+                    <tr><td>4</td><td>Zarren</td><td>1</td></tr>
+                    <tr><td>8</td><td>Jaden</td><td>0</td></tr>
+                    <tr><td>8</td><td>Jason</td><td>0</td></tr>
+                    <tr><td>8</td><td>Sebastian</td><td>0</td></tr>
+                    <tr><td>8</td><td>Mathew F</td><td>0</td></tr>
+                    <tr><td>8</td><td>Mathew H</td><td>0</td></tr>
+                    <tr><td>8</td><td>Cane</td><td>0</td></tr>
                 </tbody>
             </table>
 
@@ -341,18 +348,19 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr><td>1</td><td>Sebastian</td><td>4</td></tr>
+                    <tr><td>1</td><td>Sebastian</td><td>5</td></tr>
                     <tr><td>2</td><td>Micheal</td><td>3</td></tr>
                     <tr><td>3</td><td>Jared</td><td>2</td></tr>
-                    <tr><td>4</td><td>Max</td><td>0</td></tr>
-                    <tr><td>4</td><td>Vihaan</td><td>0</td></tr>
-                    <tr><td>4</td><td>Ben</td><td>0</td></tr>
-                    <tr><td>4</td><td>Jaden</td><td>0</td></tr>
-                    <tr><td>4</td><td>Jason</td><td>0</td></tr>
-                    <tr><td>4</td><td>Harrison</td><td>0</td></tr>
-                    <tr><td>4</td><td>Mathew F</td><td>0</td></tr>
-                    <tr><td>4</td><td>Mathew H</td><td>0</td></tr>
-                    <tr><td>4</td><td>Cane</td><td>0</td></tr>
+                    <tr><td>4</td><td>Ben</td><td>1</td></tr>
+                    <tr><td>5</td><td>Max</td><td>0</td></tr>
+                    <tr><td>5</td><td>Vihaan</td><td>0</td></tr>
+                    <tr><td>5</td><td>Jaden</td><td>0</td></tr>
+                    <tr><td>5</td><td>Jason</td><td>0</td></tr>
+                    <tr><td>5</td><td>Harrison</td><td>0</td></tr>
+                    <tr><td>5</td><td>Mathew F</td><td>0</td></tr>
+                    <tr><td>5</td><td>Mathew H</td><td>0</td></tr>
+                    <tr><td>5</td><td>Cane</td><td>0</td></tr>
+                    <tr><td>5</td><td>Zarren</td><td>0</td></tr>
                 </tbody>
             </table>
 
@@ -371,13 +379,14 @@
                     <tr><td>3</td><td>Sebastian</td><td>3</td></tr>
                     <tr><td>4</td><td>Jaden</td><td>1</td></tr>
                     <tr><td>4</td><td>Micheal</td><td>1</td></tr>
-                    <tr><td>6</td><td>Max</td><td>0</td></tr>
-                    <tr><td>6</td><td>Vihaan</td><td>0</td></tr>
-                    <tr><td>6</td><td>Jason</td><td>0</td></tr>
-                    <tr><td>6</td><td>Harrison</td><td>0</td></tr>
-                    <tr><td>6</td><td>Mathew F</td><td>0</td></tr>
-                    <tr><td>6</td><td>Mathew H</td><td>0</td></tr>
-                    <tr><td>6</td><td>Cane</td><td>0</td></tr>
+                    <tr><td>4</td><td>Zarren</td><td>1</td></tr>
+                    <tr><td>7</td><td>Max</td><td>0</td></tr>
+                    <tr><td>7</td><td>Vihaan</td><td>0</td></tr>
+                    <tr><td>7</td><td>Jason</td><td>0</td></tr>
+                    <tr><td>7</td><td>Harrison</td><td>0</td></tr>
+                    <tr><td>7</td><td>Mathew F</td><td>0</td></tr>
+                    <tr><td>7</td><td>Mathew H</td><td>0</td></tr>
+                    <tr><td>7</td><td>Cane</td><td>0</td></tr>
                 </tbody>
             </table>
 
@@ -392,17 +401,18 @@
                 </thead>
                 <tbody>
                     <tr><td>1</td><td>Jared</td><td>1</td></tr>
-                    <tr><td>2</td><td>Max</td><td>0</td></tr>
-                    <tr><td>2</td><td>Vihaan</td><td>0</td></tr>
-                    <tr><td>2</td><td>Ben</td><td>0</td></tr>
-                    <tr><td>2</td><td>Jaden</td><td>0</td></tr>
-                    <tr><td>2</td><td>Micheal</td><td>0</td></tr>
-                    <tr><td>2</td><td>Jason</td><td>0</td></tr>
-                    <tr><td>2</td><td>Harrison</td><td>0</td></tr>
-                    <tr><td>2</td><td>Sebastian</td><td>0</td></tr>
-                    <tr><td>2</td><td>Mathew F</td><td>0</td></tr>
-                    <tr><td>2</td><td>Mathew H</td><td>0</td></tr>
-                    <tr><td>2</td><td>Cane</td><td>0</td></tr>
+                    <tr><td>1</td><td>Zarren</td><td>1</td></tr>
+                    <tr><td>3</td><td>Max</td><td>0</td></tr>
+                    <tr><td>3</td><td>Vihaan</td><td>0</td></tr>
+                    <tr><td>3</td><td>Ben</td><td>0</td></tr>
+                    <tr><td>3</td><td>Jaden</td><td>0</td></tr>
+                    <tr><td>3</td><td>Micheal</td><td>0</td></tr>
+                    <tr><td>3</td><td>Jason</td><td>0</td></tr>
+                    <tr><td>3</td><td>Harrison</td><td>0</td></tr>
+                    <tr><td>3</td><td>Sebastian</td><td>0</td></tr>
+                    <tr><td>3</td><td>Mathew F</td><td>0</td></tr>
+                    <tr><td>3</td><td>Mathew H</td><td>0</td></tr>
+                    <tr><td>3</td><td>Cane</td><td>0</td></tr>
                 </tbody>
             </table>
         </section>
@@ -479,13 +489,4 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
 
